[tool.poetry]
name = "llm-tot"
version = "0.1.0"
description = ""
authors = ["timpara <t.paraskevopoulos@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.19"
openai = "^1.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
